# solnce

./: .gitignore  .woodpecker.yml  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yml  main.cpp  save-example.md  solnce  test.py  windows.cmake
.github/workflows/: build_release.yml  linux-build.yml  windows-build.yml
src/: ArchiveContainer.hpp  Bar.hpp  Event.hpp  EventManager.hpp  Foo.hpp  Game.hpp  InputEventListener.hpp  InputManager.hpp  MouseState.hpp  Shader.hpp  ShaderManager.hpp  WindowManager.cpp  WindowManager.hpp
src/components/: Dragged.hpp  Gravity.hpp  MassiveBody.hpp  OrbitComponent.hpp  Player.hpp  Polyline.hpp  Pos2D.hpp  Position.hpp  Quad.hpp  ResourceGenerator.hpp  ResourceStorage.hpp  Selected.hpp  Size.hpp  Texture.hpp  Transform.hpp
src/context/: Camera.hpp  CursorPos.hpp  GameContext.hpp
src/ecs/: Component.hpp  ComponentContainer.hpp  ComponentManager.hpp  ComponentRegistrar.hpp  Coordinator.cpp  Coordinator.hpp  Coordinator.inc.hpp  ECS.hpp  Entity.hpp  Entity.inc.hpp  EntityManager.hpp  ResourceManager.hpp  Signature.hpp  Signature.inc.hpp  System.hpp  SystemManager.hpp  Utils.hpp
src/io/: Action.hpp  InputActionMapping.hpp  InputManager.hpp  InputState.hpp
src/resources/: BodySelection.hpp  Camera.hpp  OrbitalRegistry.hpp  SimulationTime.hpp
src/shaders/: equipotential_fragment.glsl  equipotential_vertex.glsl  fragment.glsl  line_fragment.glsl  line_vertex.glsl  quad_fragment.glsl  quad_vertex.glsl  vertex.glsl
src/systems/: CameraSystem.hpp  DraggingSystem.hpp  EquipotentialRenderSystem.hpp  InputSystem.hpp  KeplerOrbitSystem.hpp  LineRenderSystem.hpp  MovingSystem.hpp  OrbitPathSystem.hpp  OrbitalSystem.hpp  PlayerMovementSystem.hpp  QuadRenderSystem.hpp  RenderSystem.hpp  RenderingSystem.hpp  ResourceSystem.hpp  SOICalculationSystem.hpp  SOISwitchingSystem.hpp  SaveSystem.hpp  SelectionSystem.hpp
src/ui/: OrbitalBodyCreationWindow.hpp  OrbitalDebugWindow.hpp  OrbitalInspectorWindow.hpp  TestWindow.hpp  TimeWindow.hpp  Window.hpp
src/utils/: OrbitalMath.hpp  macros.hpp  toString.hpp
src/utils/math/: Vec2.hpp  Vec3.hpp  Vec4.hpp
